--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -150,7 +150,7 @@ jobs:
       id-token: write
       attestations: write
       contents: read
-    uses: github/salsa/.github/workflows/sign-artifact.yml@main # change to your own org/repo if you forked this repo
+    uses: grantbirki/salsa/.github/workflows/sign-artifact.yml@main # change to your own org/repo if you forked this repo
     with:
       artifact-ids: ${{ needs.build.outputs.artifact-id }}
       artifact-path: "artifact/${{ needs.build.outputs.gem_path }}"
@@ -159,7 +159,7 @@ jobs:
     if: ${{ inputs.verify }}
     permissions: {}
     needs: [build, release, sign]
-    uses: github/salsa/.github/workflows/verify.yml@main # change to your own org/repo if you forked this repo
+    uses: grantbirki/salsa/.github/workflows/verify.yml@main # change to your own org/repo if you forked this repo
     with:
       artifact-ids: ${{ needs.build.outputs.artifact-id }}
       artifact-path: "artifact/${{ needs.build.outputs.gem_path }}"
